plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

sourceCompatibility = 1.17
targetCompatibility = 1.17


javafx {
    version = "17.0.2"
    modules = ['javafx.controls', 'javafx.web', 'javafx.media']
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}



dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.4.0'
    testImplementation 'org.mockito:mockito-inline:4.4.0'
    testImplementation 'org.mockito:mockito-core:4.4.0'
    testImplementation 'org.hamcrest:hamcrest:2.2'
    implementation 'com.google.code.gson:gson:2.9.0'

    implementation 'org.testng:testng:7.1.0'
    implementation 'org.testng:testng:7.1.0'
    implementation 'junit:junit:4.13.1'

    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
    implementation 'org.controlsfx:controlsfx:11.1.1'
    implementation 'com.google.zxing:javase:3.4.1'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'

}

application {
    // Define the main class for the application.
    mainClass = 'milestone2.view.LoginPage'
}

run {
    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
}



tasks.named('test') {
    useJUnitPlatform()
}